<resources>
    <string name="app_name">Mimyki TodoApp</string>

    <string name="eventAdd">Thêm sự kiện mới</string>
    <string name="cateAdd">Thêm phân loại mới</string>
    <string name="bigLogin">ĐĂNG NHẬP</string>
    <string name="bigRegister">ĐĂNG KÝ</string>
    <string name="eventList">Danh sách sự kiện</string>
    <string name="pay">Thanh toán</string>


    <string name="eventInfo">Thông tin sự kiện</string>
    <string name="accountInfo">Thông tin tài khoản</string>
    <string name="eventInfoName">Tên sự kiện: </string>
    <string name="eventInfoDes">Mô tả: </string>
    <string name="eventDate">Ngày và Giờ: </string>
    <string name="eventLocation">Địa điểm: </string>
    <string name="eventPriority">Độ ưu tiên: </string>
    <string name="eventInfoCate">Loại sự kiện: </string>
    <string name="eventInfoPri">Độ ưu tiên: </string>
    <string name="eventTime">Thời gian diễn ra: </string>
    <string name="user_name_acc">Tên người dùng: </string>
    <string name="username_acc">Tên đăng nhập: </string>
    <string name="week">Tuần: </string>

    <string name="saveBtn">Lưu</string>
    <string name="delBtn">Xóa</string>
    <string name="cancelBtn">Hủy</string>
    <string name="loginBtn">Đăng nhập</string>
    <string name="registerBtn">Đăng ký</string>
    <string name="timeBtn">Chọn giờ</string>
    <string name="datetimeBtn">Chọn thời gian</string>
    <string name="datetimeBtn2">Chọn ngày và giờ</string>
    <string name="datetimeEditBtn">Sửa ngày và giờ</string>
    <string name="buyPreBtn">Mua Premium</string>
    <string name="updInfoBtn">Cập nhật thông tin</string>
    <string name="setTimeBtn">Chỉnh sửa thời gian thông báo</string>
    <string name="delAccBtn">Xóa tài khoản</string>
    <string name="logoutBtn">Đăng xuất</string>
    <string name="openLocationBtn">Mở vị trí</string>
    <string name="nextBtn">Tuần sau</string>
    <string name="prevBtn">Tuần trước</string>
    <string name="buyBtn">Xác nhận mua</string>

    <string name="doneCheckbox">Hoàn thành</string>
    <string name="passW">Mật khẩu</string>
    <string name="passWConfirm">Xác nhận mật khẩu</string>
    <string name="username">Tên đăng nhập</string>
    <string name="name">Tên người dùng</string>
    <string name="cateName">Tên phân loại</string>
    <string name="eventDes">Mô tả</string>
    <string name="eventName">Tên sự kiện</string>
    <string name="eventLocationV">Địa điểm</string>
    <string name="fullname">Tên đầy đủ</string>
    <string name="premium">Premium</string>
    <string name="datetimeE">Thời gian</string>
    <string name="eventPriorityE">Mức độ ưu tiên</string>
    <string name="dayCalendar">Lịch Ngày</string>
    <string name="weekCalendar">Lịch Tuần</string>
    <string name="monthCalendar">Lịch Tháng</string>
    <string name="cardNum">Số thẻ</string>
    <string name="cardDate">Ngày hết hạn (MM/YY)</string>
    <string name="cardCVC">CVC</string>

    <string name="khanCap">KHẨN CẤP</string>
    <string name="quanTrong">QUAN TRỌNG</string>
    <string name="binhThuong">BÌNH THƯỜNG</string>
    <string name="khac">KHÁC</string>

    <string name="dialogPremium">Bạn là người dùng cao cấp</string>
    <string name="preOnlyMsg">Tính năng dành cho tài khoản Premium</string>
    <string name="noEvents">Không có sự kiện cho ngày này</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>